// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/app/demo/basic.vue correctly 1`] = `
<div class="xy-app">
  <!--teleport start-->
  <!--teleport end-->
  <!--teleport start-->
  <!--teleport end-->
  <div class="xy-space xy-space-horizontal xy-space-align-center">
    <div class="xy-space-item" style="margin-right: 8px;"><button class="xy-btn xy-btn-primary" type="button">
        <!----><span>Open message</span>
      </button></div>
    <!---->
    <div class="xy-space-item" style="margin-right: 8px;"><button class="xy-btn xy-btn-primary" type="button">
        <!----><span>Open modal</span>
      </button></div>
    <!---->
    <div class="xy-space-item"><button class="xy-btn xy-btn-primary" type="button">
        <!----><span>Open notification</span>
      </button></div>
    <!---->
  </div>
</div>
`;

exports[`renders ./components/app/demo/myPage.vue correctly 1`] = `
<div class="xy-space xy-space-horizontal xy-space-align-center">
  <div class="xy-space-item" style="margin-right: 8px;"><button class="xy-btn xy-btn-primary" type="button">
      <!----><span>Open message</span>
    </button></div>
  <!---->
  <div class="xy-space-item" style="margin-right: 8px;"><button class="xy-btn xy-btn-primary" type="button">
      <!----><span>Open modal</span>
    </button></div>
  <!---->
  <div class="xy-space-item"><button class="xy-btn xy-btn-primary" type="button">
      <!----><span>Open notification</span>
    </button></div>
  <!---->
</div>
`;
